# recruiting-agent

./: LICENSE  app.py  crew.py  crew_.py  gsheets_utils.py  pyproject.toml  recruiting-agent.py  requirements.txt
.devcontainer/: devcontainer.json
config/: agents_.yaml  tasks_.yaml
